Tweede les wat ik tot nu toe heb

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <input type="checkbox" id="menu-schuiver" checked>
     <label for="menu-schuiver" class="haal-menu"><i class="fas fa-bars"></i></label>
     <nav>
+        <label for="menu-schuiver" class="haal-menu"><i class="far fa-times-circle"></i></label>
         <ul>
             <li>
                 <a class="actief" href="#">home</a>
